fixed footer alignment

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -182,17 +182,26 @@ footer {
   font-family: var(--default-font-family);
   font-size: 24px;
   font-weight: bold;
-  padding-top: 10px;
 }
 
 .footer-rights {
   font-family: var(--default-font-family);
   font-size: 14px;
-  padding-top: 15px;
 }
 
 .facebook, .linkedin, .instagram {
   padding: 15px;
+}
+
+
+.footer-name, .footer-rights, .social-icons {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+
+.social-icons > div {
+  margin: 0 10px;
 }
 
 .social-icons a {
